--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -1,11 +1,7 @@
 # Upstream changes from _extends are only recognized when modifications are made to this file in the default branch.
 _extends: .github
 repository:
-  name: template
-  description: Template for Terraform Components
+  name: aws-account-map
+  description: 'This component is responsible for provisioning information only: it simply populates Terraform state with data (account ids, groups, and roles) that other root modules need via outputs'
   homepage: https://cloudposse.com/accelerate
   topics: terraform, terraform-component
-
-
-
-
